--- a/sections/faq.liquid
+++ b/sections/faq.liquid
@@ -455,7 +455,7 @@
           "type": "richtext",
           "id": "answer",
           "label": "Respuesta",
-          "default": "<p>Puedes hacer un pedido fácilmente a través de nuestra tienda online. Simplemente navega por nuestro catálogo, selecciona los productos que te interesen y añádelos a tu carrito. Cuando estés listo para finalizar tu compra, procede al pago y completa el proceso de checkout.</p>"
+          "default": "<p>Puedes hacer un pedido fácilmente a través de nuestra tienda online. Simplemente navega por nuestro catálogo, selecciona los productos que te interesen. Cuando estés listo para finalizar tu compra, procede al pago y completa el proceso de checkout.</p>"
         }
       ]
     }
