--- a/snippets/meta-tags.liquid
+++ b/snippets/meta-tags.liquid
@@ -68,7 +68,7 @@
   >
   <meta
     property="og:price:currency"
-    content="{{ cart.currency.iso_code }}"
+    content="{{ shop.currency }}"
   >
 {%- endif -%}
 
